@@ -1,3 +1,9 @@
+Mon Feb 23 11:01:10 2009  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/graphing.c: fix the extra precision calculations to work 
+	  for increments of 2.5.  Also try a tiny bit harder to get more
+	  than 3 ticks
+
 Sun Feb 22 00:00:04 2009  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/graphing.c: clip slopefield solutions to within the plot window.
